fix slider transition jump bug and add CSSTransition to Tile exploder

--- a/src/components/Tiles/tile-group.css
+++ b/src/components/Tiles/tile-group.css
@@ -36,7 +36,6 @@
     &--is-left-edge {
       transform-origin: left;
       transition: transform 400ms cubic-bezier(0, 0, 0.2, 1);
-      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
       transition-delay: 400ms;
     }
 
