--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -8841,7 +8841,6 @@ video {
 .tile-group__item--is-left-edge {
       transform-origin: left;
       transition: transform 400ms cubic-bezier(0, 0, 0.2, 1);
-      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
       transition-delay: 400ms;
     }
 
@@ -9169,17 +9168,11 @@ body {
   transition: background-color 200ms linear;
 }
 
-/* .bottom-56 {
-  bottom: 56px;
-} */
-
 /* main and root styles to ensure that footer doesn't creep up the page
 in the event that there isn't much content within main */
 
 main {
-  /* @apply absolute top-0 left-0 right-0; */
   flex: 1 1 auto;
-  /* @apply absolute top-0 left-0 right-0 bottom-56 */
 }
 
 code {
@@ -9369,6 +9362,8 @@ td{
   white-space: nowrap; /* added line */
   border: 0;
 }
+
+/* nicked from https://css-tricks.com/easing-linear-gradients/ */
 
 .scrim {
   background-image: linear-gradient(
